feat: add Login to Swagger documentation
